# drf-api

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
task/: models.py  tests.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_task_done.py
todo_api/: settings.py  urls.py
